More alignment fixes for the log in form

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -26,6 +26,12 @@ h4 {
     font-weight: bold; 
 }
 
+h2 {
+    text-align: center; 
+    font-family: 'Courier New', Courier, monospace; 
+    font-weight: bold; 
+}
+
 h6 { 
     text-align: center;
     font-family: 'Courier New', Courier, monospace; 
